--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=myselectshop
 
-spring.datasource.url=jdbc:mysql://localhost:3306/shop
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://myselectshop.cnccgmqcg488.ap-northeast-2.rds.amazonaws.com:3306/shop
+spring.datasource.username=jelliclesu
 spring.datasource.password=kjskjs0822!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
